# src/DocHub.Api/openapi.v1.json
@@ -5133,6 +5133,7 @@
         "required": [
           "title",
           "number",
+          "nodeTypeId",
           "nodeType",
           "parentLogicalNodeId"
         ],
@@ -5143,6 +5144,14 @@
           },
           "number": {
             "type": "string"
+          },
+          "nodeTypeId": {
+            "pattern": "^-?(?:0|[1-9]\\d*)$",
+            "type": [
+              "integer",
+              "string"
+            ],
+            "format": "int32"
           },
           "nodeType": {
             "type": "string"
